--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-    <h1>My Travel Bucket List</h1>
+    <h1>My Travel Bucket List - Changed</h1>
     <a href="wished">Places I'd Like to Visit</a>
     </br>
     <a href="visited">Places I've Already Been To</a>
